# vspells-ai-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/vspells_ai_agent/: __init__.py  jsonrpc.py  lsp_client.py  man.py  prompts.py
src/vspells_ai_agent/jsonrpc/: __init__.py  connection.py  messages.py  transport.py
